2002-09-20  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack-example.el (nethack-x-timestamp-message): Rename from
	`nethack-timestamp-message'.
	(nethack-x-gdb): Rename from `nh-gdb'.
	(nethack-x-warn-low-hp): Add function.

	* nethack-api.el (nh-status-string): Add function.
	(nh-status-n, nh-status-w, nh-status-s, nh-status-d, nh-status-c) 
	(nh-status-i, nh-status-W, nh-status-C, nh-status-A, nh-status-L) 
	(nh-status-l, nh-status-g, nh-status-h, nh-status-p, nh-status-a) 
	(nh-status-e, nh-status-t, nh-status-f): Add functions.

	* nethack.el (nethack-status-attribute-change-functions): Rename
	from `nethack-status-attribute-change-hook'.

	* nethack-api.el (nh-print-status): Rewrite.

	* nethack.el (nethack-status-format): Remove variable.
	(nethack-status-in-modeline): Remove variable.
	(nethack-status-buffer-format): Add variable.
	(nethack-status-mode-line-format): Add variable.
	(nethack-status-header-line-format): Add variable.

	* nethack-keys.el: Remove require.

	* nethack-glyphs.el (nh-empty-tile): Rename from
	nethack-empty-tile.
	(nh-tile-vector): Rename from nethack-glyph-vector.

	* nethack-cmd.el: Add provide line.

	* nethack-api.el: Move all customizable variables and face
	definitions to nethack.el.

	* nethack.el: Reorder functions and variables.  Cosmetic change.
	Update comments.
	
2002-09-19  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack.el: Rename all "non-user" functions and variables from
	nethack-* to nh-*.  Rename all nethack-api-* functions and
	variables to nhapi-*.  Rename all references of "glyphs" to
	"tiles" (except for the filename nethack-glyphs.el).

	* nethack-keys.el: Likewise.

	* nethack-glyphs.el: Likewise.

	* nethack-example.el: Likewise.
	
	* nethack-cmd.el: Likewise.

	* nethack-api.el: Likewise.
	
	* nethack-api.el (overlay): Add require for XEmacs.

2002-09-16  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* Makefile (test-patch): Add rule.
	(dist): Depend on a tested patch.
